[package]
name = "client_tls"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.4"
tokio = { version = "0.2.14", features = ["full"] }
hyper-tls = "0.4.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
bytes = "0.5.4"
